network-policy/alpine-allow-from.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alpine-allow-from
spec:
  podSelector:
    matchLabels:
      run: alpine
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hello
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
