network-policy/nginx-from.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-from
spec:
  podSelector:
    matchLabels:
      app: nginx
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hello
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  policyTypes:
    - Egress
